logs/Slang/generated/hdlconv/hdlconvertor_p760.sv.log
name: hdlconvertor_p760
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p760.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p760.sv:8:3: error: expected member
  specify
  ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p760.sv:10:5: error: expected member
    $setup( ch.d, posedge ch.c, 1 );
    ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p760.sv:11:3: error: expected member
  endspecify
  ^~~~~~~~~~
